crates/bc-cli/tests/cli/snapshots/cli__account_life__archive_rejects_a_parent_with_an_active_child.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: data error: cannot archive an account while 1 descendant(s) remain active: Checking; archive them first or pass cascade
