crates/bc-cli/tests/cli/snapshots/cli__account_life__archive_with_cascade_archives_the_subtree-2.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                 | NAME   | TYPE  | KIND  | OPENED | CLOSED
===============================================================================
 [ACCOUNT_ID] | Assets | Asset | Group |        |
----- stderr -----
