crates/bc-cli/tests/cli/snapshots/cli__account_life__close_nonexistent_returns_error.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid account ID 'account_notavalidid0000000000': invalid AccountId: Suffix error: Invalid `TypeID` suffix: Suffix must be exactly 26 characters long
