crates/bc-cli/tests/cli/snapshots/cli__account_life__close_rejects_a_parent_with_an_open_child.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: data error: cannot close an account while 1 descendant(s) remain open: Checking; close them first or pass cascade
