crates/bc-cli/tests/cli/snapshots/cli__account_life__close_with_cascade_closes_the_subtree-2.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                 | NAME     | TYPE  | KIND           | OPENED | CLOSED
==============================================================================================
 [ACCOUNT_ID] | Assets   | Asset | Group          |        |
------------------------------------+----------+-------+----------------+--------+------------
 [ACCOUNT_ID] | BankA    | Asset | Group          |        | 2024-06-30
------------------------------------+----------+-------+----------------+--------+------------
 [ACCOUNT_ID] | Checking | Asset | DepositAccount |        | 2024-06-30
----- stderr -----
