crates/bc-cli/tests/cli/snapshots/cli__account_life__close_with_cascade_closes_the_subtree.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Closed account: [ACCOUNT_ID] (on 2024-06-30)
----- stderr -----
