crates/bc-cli/tests/cli/snapshots/cli__account_life__closing_an_already_closed_account_exits_three.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: false
exit_code: 3
----- stdout -----
----- stderr -----
error: account already closed: [ACCOUNT_ID]
