crates/bc-cli/tests/cli/snapshots/cli__account_life__create_with_opened_on.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created account: Assets:BankA:Checking ([ACCOUNT_ID])
  also created: Assets (Group), Assets:BankA (Group)
----- stderr -----
