crates/bc-cli/tests/cli/snapshots/cli__account_life__create_with_opened_on_shows_in_list.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                 | NAME     | TYPE  | KIND           | OPENED     | CLOSED
==============================================================================================
 [ACCOUNT_ID] | Assets   | Asset | Group          |            |
------------------------------------+----------+-------+----------------+------------+--------
 [ACCOUNT_ID] | BankA    | Asset | Group          |            |
------------------------------------+----------+-------+----------------+------------+--------
 [ACCOUNT_ID] | Checking | Asset | DepositAccount | 2024-01-01 |
----- stderr -----
