crates/bc-cli/tests/cli/snapshots/cli__account_life__recreate_with_opened_on_when_none_stored_is_rejected.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid input: account 'Assets:BankA:Checking' already exists with a different opening date
